--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "projects/1_ScorePredictor_web_app"]
 	path = projects/1_ScorePredictor_web_app
 	url = https://github.com/aorko01/ML_project.git
+[submodule "projects/Smart-Library"]
+	path = projects/Smart-Library
+	url = https://github.com/aorko01/Smart-Library.git
