Add 2.Learning_pytorch as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "projects/Smart-Library"]
 	path = projects/Smart-Library
 	url = https://github.com/aorko01/Smart-Library.git
+[submodule "Month_1/2.Learning_pytorch"]
+	path = Month_1/2.Learning_pytorch
+	url = https://github.com/aorko01/2.Learning_pytorch.git
